tests/query_runtime_errors/binary_operators_or_right/error.txt
Error: 
    1 | select event.a or event.b from in into out;
      |                   ^^^^^^^ The binary operation `or` is not defined for the type `bool` and `string`
